[package]
name = "rusty-asm"
version = "0.1.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A layer of syntactic sugar between Rust and inline assembly"
keywords = ["assembly", "assembler"]
#repository = 
#documentation = 
categories = ["development-tools"]
readme = "README.md"
include = ["/Cargo.toml", "/src/**/*.rs", "/README.md", "/LICENSE-APACHE", "/LICENSE-MIT"]

[lib]
crate-type = ["proc-macro"]

[dependencies]
proc-macro2 = "0.3"
quote = "0.5"
syn = { version = "0.13", default-features = false, features = ["clone-impls", "derive", "full", "parsing", "printing", "extra-traits"] }
unicode-xid = { version = "0.1", optional = true }

[features]
default = ["nightly", "proc-macro"]

nightly = ["proc-macro2/nightly"]
proc-macro = ["proc-macro2/proc-macro"]

stable-unicode-xid = ["unicode-xid"]
