[package]
name = "rusty-asm"
version = "0.2.1"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A layer of syntactic sugar between Rust and inline assembly"
keywords = ["assembly", "assembler"]
repository = "https://github.com/jeremydavis519/rusty-asm"
categories = ["development-tools"]
readme = "README.md"
include = ["/Cargo.toml", "/src/**/*.rs", "/README.md", "/LICENSE-APACHE", "/LICENSE-MIT"]

[badges]
travis-ci = { repository = "jeremydavis519/rusty-asm", branch = "master" }
coveralls = { repository = "jeremydavis519/rusty-asm", branch = "master", service = "github" }

[lib]
crate-type = ["proc-macro"]

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", default-features = false, features = ["clone-impls", "derive", "full", "parsing", "printing", "visit-mut", "extra-traits"] }
unicode-xid = { version = "0.1" }

[features]
default = [] # The default build is more stable but doesn't let us produce custom warnings from the macro.

proc-macro = ["proc-macro2/nightly", "proc-macro2/proc-macro"]

[dev-dependencies]
runtime-macros = "0.3"
